--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <title>Todo App</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="h-screen bg-secondary bg-opacity-16">
+    <div class="h-full" id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
