added styling in login page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <title>Todo App</title>
   </head>
-  <body class="h-screen bg-secondary bg-opacity-16">
+  <body class="h-screen bg-sky-50">
     <div class="h-full" id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
