--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Todo App</title>
   </head>
   <body class="h-screen bg-sky-50">
-    <div class="h-full" id="root"></div>
+    <div class="h-full text-gray-800" id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
